--- a/piston/templates/index.html
+++ b/piston/templates/index.html
@@ -3,12 +3,6 @@
 
 {% include "_messages.html" %}
 
-<h4>Installed Accounts</h4>
-<ol>
-{% for account in accounts %}
-<li>{{ account }} 
-    {{ accounts[account] }}</li>
-{% endfor %}
-</ol>
+Index
 
 {% endblock %}
