--- a/piston/templates/_macros.html
+++ b/piston/templates/_macros.html
@@ -3,6 +3,84 @@
  {{user}}
 {% endmacro %}
 
+{% macro showPost(post, type) %}
+<div class="panel panel-default">
+ {% if post.title %}
+  <div class="panel-heading">
+   <a href="{{url_for("read", identifier=post.identifier)}}">
+    {{ post.title }}
+   </a>
+  </div>
+ {% endif %}
+ <div class="panel-body">
+  {% if type == "full" %}
+   {{ post.body | markdown }}
+  {% else %}
+   {{ post.body | excert | markdown }} ...
+  {% endif %}
+ </div>
+ <table class="table">
+  <tr>
+   <td>
+    <button type="button" class="btn btn-success btn-xs text-danger upvoteButton" identifier="{{post.identifier}}">
+     <i class="fa fa-thumbs-up"></i>
+    </button>
+   </td>
+   <td>
+    <i class="fa fa-money"></i> {{post.total_payout_value}}
+   </td>
+   <td>
+    <i class="fa fa-clock-o"></i>
+    {{post.created | age}}
+    ago
+   </td>
+   <td>
+    by 
+    {{ formatUser(post.author) }}
+   </td>
+   <td>
+    in
+    <i class="fa fa-globe"></i>
+    <a href="{{url_for("browse", category=post.category, sort=sort)}}">
+     {{post.category}}
+    </a>
+   </td>
+   <td>
+    <i class="fa fa-users"></i> {{ post.active_votes | length }}
+   </td>
+   <td>
+    <i class="fa fa-comment"></i> {{ post.children }}
+   </td>
+   <td>
+   </td>
+   <td>
+    <button type="button" class="btn btn-danger btn-xs text-danger downvoteButton" identifier="{{post.identifier}}">
+     <i class="fa fa-flag"></i>
+    </button>
+   </td>
+  </tr>
+ </table>
+</div>
+{% endmacro %}
+
+{% macro recursiveComments(post) %}
+  <div class="col-md-11">
+   {{ showPost(post, "full") }}
+
+   {% if post.children %}
+   <div class="row">
+    <div class="col-md-1"></div>
+    {% for comment in post.get_comments() %}
+     {{ recursiveComments(comment) }}
+    {% endfor %}
+   </div>
+   {% endif %}
+
+
+  </div>
+{% endmacro %}
+
+
 {% macro show_form_errors(f) %}
   {% for k in f %}
    {% if k.errors[0] %}
