--- a/piston/templates/read.html
+++ b/piston/templates/read.html
@@ -1,4 +1,4 @@
-{% from "_macros.html" import formatUser, showPost, recursiveComments %}
+{% from "_macros.html" import formatUser, showPost, recursiveComments with context %}
 
 {% extends "layout.html" %}
 {% block content %}
