[web] fixes for the wallet import procedure

--- a/piston/templates/index.html
+++ b/piston/templates/index.html
@@ -3,6 +3,7 @@
 
 {% include "_messages.html" %}
 
-Index
+<!-- This is a place for piston related announcements, an overview page,
+     stats, yada yada //-->
 
 {% endblock %}
