--- a/piston/templates/wallet-keys.html
+++ b/piston/templates/wallet-keys.html
@@ -12,6 +12,7 @@
    </div>
    <div class="panel-body">
     <p>This private key gives access to <strong>voting</strong> and <strong>posting</strong> permission of your account.
+    <pre>{{ posting_key_pub }}</pre>
     <pre>{{ posting_key }}</pre>
    </div>
  </div>
@@ -24,6 +25,7 @@
    </div>
    <div class="panel-body">
     <p>This key has access to the <strong>funds</strong> of your account and can change keys (except for the owner key)</p>
+    <pre>{{ active_key_pub }}</pre>
     <pre>{{ active_key }}</pre>
    </div>
  </div>
@@ -39,6 +41,7 @@
     <span class="text-danger">The fact that you have the owner key
      installed in piston tells us that you are doing something
      wrong!</span></p>
+    <pre>{{ owner_key_pub }}</pre>
     <pre>{{ owner_key }}</pre>
    </div>
  </div>
@@ -51,6 +54,7 @@
    </div>
    <div class="panel-body">
     <p>This key is used for encrypted messaging within the Steem blockchain.</p>
+    <pre>{{ memo_key_pub }}</pre>
     <pre>{{ memo_key }}</pre>
    </div>
  </div>
