[web] settings page

--- a/piston/templates/layout.html
+++ b/piston/templates/layout.html
@@ -83,6 +83,7 @@
        {% endfor %}
        </ul>
       </li>
+      <li role="presentation"><a href="{{url_for("settings")}}"><i class="fa fa-sliders"></i> Settings</a></li>
       <!--
        <li role="presentation"><a href=""><i class="fa fa-heartbeat"></i> Status</a></li>
       //-->
