--- a/piston/templates/browse.html
+++ b/piston/templates/browse.html
@@ -19,6 +19,12 @@
   {% for post in posts %}
    {{ showPost(post, "excerpt") }}
   {% endfor %}
+
+  <div class="text-center">
+   <a class="btn btn-primary btn-lg"
+      href="{{url_for("browse", sort=sort, category=category, start=posts[-1].identifier, _external=True)}}">
+      read more</a>
+  </div>
  </div>
 
  <div class="col-md-2">
