--- a/piston/templates/layout.html
+++ b/piston/templates/layout.html
@@ -84,9 +84,6 @@
        </ul>
       </li>
       <li role="presentation"><a href="{{url_for("settings")}}"><i class="fa fa-sliders"></i> Settings</a></li>
-      <!--
-       <li role="presentation"><a href=""><i class="fa fa-heartbeat"></i> Status</a></li>
-      //-->
     </ul>
 
     </div>
@@ -123,6 +120,18 @@
     </div>
    </div>
   </div>
+
+  <footer class="footer">
+   <div class="container">
+    <div class="collapse navbar-collapse">
+     <ul class="nav navbar-nav" role="tablist">
+      <!--
+       <li role="presentation"><a href=""><i class="fa fa-heartbeat"></i> Status</a></li>
+      //-->
+     </ul>
+    </div>
+   </div>
+  </footer>
 
 {{super()}}
 {% assets "js_main" %}
