--- a/piston/templates/user-replies.html
+++ b/piston/templates/user-replies.html
@@ -8,7 +8,7 @@
 <div class="row">
  <div class="col-md-10">
   {% for post in posts %}
-   {{ showPost(post, "excerpt") }}
+   {{ showPost(post, "reply") }}
   {% endfor %}
  </div>
 
