[web] cleanup and singelton websocket connection

--- a/piston/templates/user-funds.html
+++ b/piston/templates/user-funds.html
@@ -77,7 +77,7 @@
               change at any time without further notice).
     </small></p>
    </td>
-   <td>{{ interest["interest"] | currency }} SBD</td>
+   <td>{{ interest["interest_rate"] }}%</td>
   </tr>
   <tr>
    <td>Currently Accumulated Interest
